Kubernetes/do-nothing-pod.yml
apiVersion: v1
kind: Pod
metadata:
name: my-pod
spec:
containers:
- name: busybox
  image: radial/busyboxplus:curl
  command: ['sh', '-c', 'while true; do sleep 3600; done']
