Kubernetes/multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
name: multi-container-pod
spec:
  containers:
  - name: nginx
    image: nginx
  - name: redis
    image: redis
  - name: couchbase
    image: couchbase
