Kubernetes/restart-onfailure-pod.yml
apiVersion: v1
kind: Pod
metadata:
name: onfailure-pod
spec:
  restartPolicy: OnFailure
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10']
