Kubernetes/restart-policy-never-pod.yml
apiVersion: v1
kind: Pod
metadata:
name: never-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10; this is a bad command that will fail']
